log/build_2025-06-18_10-44-29/gantry_lidars/stderr.log
  File "/home/gantry_lattepanda/Ryan_ws/gantry_lidars/install/gantry_lidars/lib/python3.12/site-packages/gantry_lidars/PointCloudMerger.py", line 21
    T = data['Transform']['R'])
                              ^
SyntaxError: unmatched ')'

